Better ingredient endpoint